# MESH_MAPPER

./: .gitignore  CMakeLists.txt  README.md
files/: aircraft_wing.tri  commented_straight_dome.tri  double_dome.tri  indexed_straight_dome.tri  manual_UV_out.tri  old_straight_dome.tri  part_sphere_high.tri  part_sphere_low.tri  part_sphere_med.tri  part_sphere_v_high.tri  patch_antenna.tri  radome.tri
saved_models_pics/Matricies/: A_dense.txt  dense_A_Mf1.txt
saved_models_pics/Sparse/High/: high_output_UV.tri
saved_models_pics/Sparse/Low/: low_modifiedTRI.tri
saved_models_pics/Sparse/Med/: med_modifiedTRI.tri  med_output_UV.tri
saved_models_pics/Sparse/direct/High/: high_modifiedTRI.tri
saved_models_pics/Sparse/direct/Low/: low_output_UV.tri
saved_models_pics/Sparse/direct/V_High/: v_high_modifiedTRI.tri
saved_models_pics/Sparse/direct/radome/: radome_modifiedTRI.tri
saved_models_pics/Sparse/iterative/aircraft_wing/: rotated_only_modifiedTRI.tri
saved_models_pics/Sparse/iterative/double_dome/: better_Selectedpatch.tri  bigger_but_sti;_duplicates_Selectedpatch.tri  double_dome_output_UV.tri  double_dome_rotated_only_modifiedTRI.tri
saved_models_pics/Sparse/radome/: WEIRD_radome_output_UV.tri
src/: CMakeLists.txt  Edge.cpp  Edge.hpp  Face.cpp  Face.hpp  FileIO.cpp  FileIO.hpp  Point.cpp  Point.hpp  TRI_mapper.cpp  TRI_mapper.hpp  TRI_reader.cpp  TRI_reader.hpp  dense_TRI_mapper.cpp  dense_TRI_mapper.hpp  dense_version.cpp  edge_and_winding.cpp  patch_selection.cpp  processing.cpp  processing.hpp
(+12 files in other folders)
